--- a/2-div/Main.vm
+++ b/2-div/Main.vm
@@ -21,10 +21,11 @@ function Main.main 0
 
 // nao precisa mexer aqui, esse
 // exercicio tem que implementar o div.vm
-push constant 15
-push constant 5
+// Corsi, o valor não pode ficar preso em 15 e 5, senão não passa no primeiro teste
+push temp 0
+push temp 2
 call div 2
 pop temp 1
 
-label while
-    goto while
+// Tirei o loop infinito
+
