--- a/4-isqrt/isqrt.vm
+++ b/4-isqrt/isqrt.vm
@@ -1,3 +1,26 @@
 function isqrt 2
 
+    push argument 0
+    pop local 0
 
+    push constant 0
+    pop local 1
+
+    label loop
+        push local 1
+        push local 1
+        call mult 2
+        push local 0
+        eq
+        if-goto end
+
+        push constant 1
+        push local 1
+        add
+        pop local 1
+
+        goto loop
+
+    label end
+        push local 1
+        return
